third_party/move/move-compiler/tests/move_check/translated_ir_tests/move/signer/address_arg_is_not_signer.exp
error[E05001]: ability constraint not satisfied
  ┌─ tests/move_check/translated_ir_tests/move/signer/address_arg_is_not_signer.move:5:27
  │
5 │     struct R has key { s: signer }
  │                           ^^^^^^
  │                           │
  │                           Invalid field type. The struct was declared with the ability 'key' so all fields require the ability 'store'
  │                           The type 'signer' does not have the ability 'store'

error[E04016]: too few arguments
   ┌─ tests/move_check/translated_ir_tests/move/signer/address_arg_is_not_signer.move:14:9
   │
14 │         0x2::M::store_signer(s)
   │         ^^^^^^^^^^^^^^^^^^^^^^^
   │         │                   │
   │         │                   Found 1 argument(s) here
   │         Invalid call of '0x2::M::store_signer'. The call expected 2 argument(s) but got 1

error[E04016]: too few arguments
   ┌─ tests/move_check/translated_ir_tests/move/signer/address_arg_is_not_signer.move:21:9
   │
21 │         0x2::M::store_signer(s2)
   │         ^^^^^^^^^^^^^^^^^^^^^^^^
   │         │                   │
   │         │                   Found 1 argument(s) here
   │         Invalid call of '0x2::M::store_signer'. The call expected 2 argument(s) but got 1

